syntax = "proto3";

package io.products.channelAttributeMapping.api;

option java_outer_classname = "ChannelAttributeMappingApi";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
import "io/products/channelAttributeMapping/domain/channel_attribute_mapping_domain.proto";

service ChannelAttributeMappingService {
  option (kalix.codegen) = {
    value_entity: {
      name: "io.products.channelAttributeMapping.domain.ChannelAttributeMapping"
      entity_type: "channel_attribute_mapping"
      state: "io.products.channelAttributeMapping.domain.ChannelAttributeMappingState"
    }
  };

  rpc CreateChannelAttributeMapping(ChannelAttributeMapping) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/create_channel_attribute_mapping"
      body: "*"
    };
  };

  rpc GetChannelAttributeMapping(GetChannelAttributeMappingRequest) returns (ChannelAttributeMapping);

  rpc UpdateChannelAttributeMapping(ChannelAttributeMapping) returns (google.protobuf.Empty);

  rpc DeleteChannelAttributeMapping(DeleteChannelAttributeMappingRequest) returns (google.protobuf.Empty);

}

message ChannelAttributeMapping {
  string channel_attribute_mapping_id = 1 [(kalix.field).entity_key = true];
  string attribute_id = 2 ;
  string channel_id = 3;
  string channel_attribute_name = 4;
}

message GetChannelAttributeMappingRequest {
  string channel_attribute_mapping_id = 1 [(kalix.field).entity_key = true];
}
message DeleteChannelAttributeMappingRequest {
  string channel_attribute_mapping_id = 1 [(kalix.field).entity_key = true];
}

