syntax = "proto3";

package io.products.channelAttributeMapping.domain;

option java_outer_classname = "ChannelAttributeMappingDomain";


message ChannelAttributeMappingState {
  string mappingId = 1;
  string attributeId = 2;
  string channelId = 3;
  string destinationField = 4;
  string type = 5;
  string group = 6;
  bool isCommon = 7;
}